--- a/demo-scripts/teleportation/acr-task.yaml
+++ b/demo-scripts/teleportation/acr-task.yaml
@@ -1,8 +1,6 @@
 version: v1.1.0
 steps:
-  - id: docker-image-list
-    cmd: orca images
-  - id: orca-run
-    cmd: >
+  - cmd: orca images
+  - cmd: >
       orca run demo42t.azurecr.io/base-artifacts/azure-cli:2.0.75 
       echo -e '\e[32m beam me up \e[0m'
